--- a/app/styles/global.scss
+++ b/app/styles/global.scss
@@ -19,4 +19,5 @@ $rem-baseline: 10px;
 @import './base/layout.scss';
 
 // components
-@import './components/modules/modal.scss';
+@import './components/modal.scss';
+@import './components/survey.scss';
