--- a/app/styles/base/layout.scss
+++ b/app/styles/base/layout.scss
@@ -5,62 +5,25 @@ body,
   height: 100%;
 }
 
+$headerHeight: 4rem;
+
 .layout {
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 
   &.scroll--lock {
     overflow: hidden;
   }
 
-  &__app {
+  &-header {
+    width: 100%;
+    flex: 0 0 $headerHeight;
+  }
+
+  &-wrapper {
     width: 100%;
     height: 100%;
-  }
-
-  &__wrapper {
-    width: 100%;
-  }
-
-  &__header {
-    width: 100%;
-    background: $white;
-  }
-
-  &__document {
-    width: 100%;
-  }
-
-  &__contents {
-    padding-bottom: rem(80px);
-  }
-
-  &__dockbar {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    z-index: 100;
-    width: 100%;
-    height: rem(52px);
-    background: $white;
-    border-top: 1px solid $greye8;
-  }
-
-  &__footer {
-    background: $greyf8;
-    padding-bottom: rem(52px);
-
-    &.bottomFloating {
-      padding-bottom: rem(56px);
-    }
-  }
-
-  &__floating {
-    display: flex;
-    overflow: hidden;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    z-index: 10;
-    width: 100%;
   }
 }
