반응형 css작업

--- a/app/styles/base/reset.scss
+++ b/app/styles/base/reset.scss
@@ -188,6 +188,11 @@ button {
   background: none;
   outline: 0;
   user-select: none;
+  cursor: pointer;
+
+  &:disabled {
+    cursor: no-drop;
+  }
 }
 
 label {
