--- a/app/styles/base/layout.scss
+++ b/app/styles/base/layout.scss
@@ -13,10 +13,12 @@ $headerHeight: 4rem;
   display: flex;
   flex-direction: column;
 
-  @media screen and (min-width: 800px) {
-    display: block;
-    margin: 0 auto;
-    max-width: 500px;
+  &--calculator {
+    @media screen and (min-width: 800px) {
+      display: block;
+      margin: 0 auto;
+      max-width: 500px;
+    }
   }
 
   &.scroll--lock {
