--- a/app/styles/base/layout.scss
+++ b/app/styles/base/layout.scss
@@ -8,14 +8,15 @@ body,
 $headerHeight: 4rem;
 
 .layout {
-  width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  height: 100%;
 
   &--calculator {
     @media screen and (min-width: 800px) {
       display: block;
+      height: auto;
       margin: 0 auto;
       max-width: 500px;
     }
@@ -32,6 +33,5 @@ $headerHeight: 4rem;
 
   &-wrapper {
     width: 100%;
-    height: 100%;
   }
 }
