--- a/app/styles/components/survey.scss
+++ b/app/styles/components/survey.scss
@@ -30,6 +30,7 @@ $xPadding: 2rem;
   }
 
   &-tip {
+    margin-bottom: 4rem;
     color: #aaa;
     font-size: 1.2rem;
     line-height: 1.5;
@@ -91,6 +92,24 @@ $xPadding: 2rem;
         background: url('/assets/images/icon/check.svg') no-repeat center center/ 100% auto;
         content: '';
       }
+    }
+  }
+
+  .survey-input-number {
+    display: flex;
+    align-items: center;
+
+    input {
+      min-width: 2rem;
+      font-size: 1.5rem;
+      font-weight: bold;
+      line-height: 2.2rem;
+    }
+
+    span {
+      padding-left: 0.5rem;
+      font-size: 1.4rem;
+      // line-height: 4rem;
     }
   }
 }
