--- a/app/styles/components/survey.scss
+++ b/app/styles/components/survey.scss
@@ -100,9 +100,8 @@ $xPadding: 2rem;
     align-items: center;
 
     input {
-      min-width: 2rem;
+      width: 2rem;
       font-size: 1.5rem;
-      font-weight: bold;
       line-height: 2.2rem;
     }
 
