--- a/app/styles/components/survey.scss
+++ b/app/styles/components/survey.scss
@@ -22,6 +22,7 @@ $xPadding: 2rem;
   &-question {
     display: block;
     font-size: 1.4rem;
+    line-height: 1.3;
     // margin-bottom: 2rem;
 
     em {
