--- a/app/styles/base/layout.scss
+++ b/app/styles/base/layout.scss
@@ -5,7 +5,7 @@ body,
   height: 100%;
 }
 
-$headerHeight: 4rem;
+$headerHeight: 0; // 3rem;
 
 .layout {
   display: flex;
@@ -36,6 +36,8 @@ $headerHeight: 4rem;
   }
 
   &-wrapper {
+    overflow-x: hidden;
+    overflow-y: auto;
     width: 100%;
     height: 100%;
   }
