--- a/app/styles/components/survey.scss
+++ b/app/styles/components/survey.scss
@@ -6,17 +6,28 @@ $xPadding: 2rem;
   width: 100%;
   padding: 2rem $xPadding;
 
+  &-wrapper {
+  }
+
+  &-main-title {
+    padding: 2rem $xPadding;
+    color: $point;
+    font-size: 2.5rem;
+    font-weight: bold;
+    line-height: 1.5;
+  }
+
   // todo: pc버전
 
   &-title {
-    margin-top: 4rem;
+    margin-bottom: 4rem;
     font-size: 2.2rem;
     font-weight: bold;
     line-height: 1.5;
   }
 
   &-box {
-    margin-top: 4rem;
+    margin-bottom: 4rem;
   }
 
   &-question {
@@ -45,8 +56,7 @@ $xPadding: 2rem;
     display: flex;
     gap: 1rem;
     justify-content: space-around;
-    margin: 6rem 0;
-    padding: 0 $xPadding;
+    padding: 3rem $xPadding 6rem;
   }
 
   &-button {
@@ -55,6 +65,7 @@ $xPadding: 2rem;
     height: 4rem;
     border-radius: 1rem;
     background: $point;
+    color: $black;
     font-size: 1.2rem;
     line-height: 1.2;
 
@@ -104,6 +115,12 @@ $xPadding: 2rem;
     display: flex;
     align-items: center;
 
+    &.sizeM {
+      input {
+        width: 4rem;
+      }
+    }
+
     input {
       width: 3rem;
       font-size: 1.4rem;
@@ -113,7 +130,27 @@ $xPadding: 2rem;
     span {
       padding-left: 0.5rem;
       font-size: 1.4rem;
-      // line-height: 4rem;
+    }
+  }
+
+  .survey-input-price {
+    display: flex;
+    align-items: center;
+    margin: 2rem 0;
+
+    @media screen and (min-width: 800px) {
+      margin: 0;
+    }
+
+    input {
+      width: 20rem;
+      font-size: 1.4rem;
+      line-height: 2.2rem;
+    }
+
+    span {
+      padding-left: 0.5rem;
+      font-size: 1.2rem;
     }
   }
 }
